# eMaps

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  build.sh
backend/: .gitignore  Cargo.toml  Makefile
backend/src/: logger.rs  main.rs
backend/src/graph/: grid.rs  mod.rs  router.rs
backend/src/osm/: highway.rs  mod.rs  options.rs  pbf.rs
backend/src/rest/: mod.rs
doc/paper/: fapra_paper.aux  fapra_paper.bbl  fapra_paper.blg  fapra_paper.tex  ref.bib
doc/presentation/: fapra (2).pptx  fapra.pptx
frontend/: Makefile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: config.js  index.css
frontend/src/components/: navigation.js  osm.js
frontend/src/components/app/: App.css  App.js
paper/: fapra_paper.aux  fapra_paper.bbl  fapra_paper.blg  fapra_paper.tex  ref.bib
presentation/: fapra.pptx
