[package]
name = "backend"
version = "0.1.0"
authors = ["Adrian Wersching <dev@awersching.de>", "Tobias Mathony <mathony.tobias@gmail.com>"]
edition = "2018"

[dependencies]
osmpbfreader = "0.13.2"
geo = "0.12.2"
stable-vec = "0.4.0"

serde = { version = "1.0.101", features = ["derive"] }
bincode = "1.2.0"

actix-web = "1.0.8"
actix-files = "0.1.6"
actix-cors = "0.1.0"

strum = "0.16.0"
strum_macros = "0.16.0"

log = "0.4.8"
log4rs = "0.8.3"
